<resources>
    <string name="globalState">globalState</string>
    <string name="app_name">GrowthAid</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Eurecom</string>
    <string name="slogan">Seeding Future</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_project_list">ProjectListActivity</string>
    <string name="title_activity_share_on_facebook">ShareOnFacebook</string>
    <string name="donation_confirmation">Donation done</string>
    <string name="sharing_question_1">Your contribution of\u0020</string>
    <string name="sharing_question_2"> \u0020 € has seed a better future.""\n\nDo you want to share it on Faceebook?</string>
    <string name="payment_error">Payment canceled due to an error</string>

    <string name="sky">sky</string>
    <string name="sun">sun</string>
    <string name="cloud">cloud</string>
    <string name="pot">pot</string>
    <string name="flower">flower</string>
    <string name="seed">seed</string>
    <string name="time">time</string>
    <string name="background">background</string>
    <string name="rose">rose</string>
    <string name="planting_ground">planting ground</string>
    <string name="amnesty_flower">amnesty flower</string>
    <string name="msf_flower">msf flower</string>
    <string name="unicef_flower">unicef flower</string>
    <string name="ground">ground</string>
    <string name="hotair_balloon">hotair balloon</string>
    <string name="title_activity_setting">settingActivity</string>

    <string name="fbquestion">Ask for sharing on Facebook</string>
    <string name="fbquestion2">Share</string>
    <string name="payment_method">Payment Method</string>
    <string name="save_settings">Save \nSettings</string>
    <string name="change_username">Change your user name: </string>
    <string name="change_password">Change your password: </string>
    <string name="write_password">Introduce your current password: </string>



    <!--<string name="title_activity_settings">Settings</string>-->
    <!--<string name="search_distance">Search Distance</string>-->
    <!--<string name="logout_full">Log out of Anywall</string>-->
    <!--<string name="post">Post</string>-->
    <!--<string name="prompt_post">Post</string>-->
    <!--<string name="post_out_of_range">Can\'t view post! Get closer.</string>-->
    <!--<string name="progress_post">Posting&#8230;</string>-->
    <!--<string name="settings_distance_format">%d feet</string>-->
    <!--<string name="activity_post_title">Create a Post</string>-->
    <!--<string name="character_count_placeholder">0/140</string>-->

</resources>