<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sky"
    android:background="#00004C"
    tools:context="com.example.fredo.animationtest.AnimActivity">




    <ImageView
        android:id="@+id/sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sun"
        android:src="@drawable/sun"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:baselineAlignBottom="true"
        android:layout_alignBottom="@+id/ground" />

    <ImageView
        android:id="@+id/cloud1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cloud"
        android:src="@drawable/cloud"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-200dp"
        android:layout_marginTop="40dp" />

    <ImageView
        android:id="@+id/cloud2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cloud"
        android:src="@drawable/cloud"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-300dp"
        android:layout_marginTop="100dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/ground"
        android:background="#004700"
        android:layout_alignParentBottom="true" >
    </RelativeLayout>

    <ImageView
        android:id="@+id/pot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pot"
        android:src="@drawable/pot"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="300dp" />

    <ImageView
        android:id="@+id/flower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/flower"
        android:src="@drawable/flower"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="100dp"
        android:scaleX="0"
        android:scaleY="0" />

    <ImageView
        android:id="@+id/seed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/seed"
        android:src="@drawable/seed"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="400dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:id="@+id/greeting"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Left"
        android:id="@+id/buttonLeft"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Middle"
        android:id="@+id/buttonMiddle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Right"
        android:id="@+id/buttonRight"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />


</RelativeLayout>
